<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageRecycler"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/imageList"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tvListPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:layout_marginStart="80dp"
            android:textSize="24sp"
            tools:text="@string/textListPrice"
            android:textColor="@color/primary_text" />

        <TextView
            android:id="@+id/tvListName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="210dp"
            android:textSize="24sp"
            tools:text="@string/textListName"
            android:textColor="@color/primary_text" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>